css/admin_css/style_adminNav.css
@font-face {
  font-family: 'Roboto-regular';
  src: url('../../other/fonts/Roboto-Regular.eot');
  src: local('Roboto Regular'), url('../../other/fonts/Roboto-Regular.ttf'), format('truetype');
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'Roboto-light';
  src: url('../../other/fonts/Roboto-Light.eot');
  src: local('Roboto Light'), url('../../other/fonts/Roboto-Light.ttf'), format('truetype');
  font-weight: lighter;
  font-style: normal;
}

@font-face {
  font-family: 'Roboto-bold';
  src: url('../../other/fonts/Roboto-Bold.eot');
  src: local('Roboto Bold'), url('../../other/fonts/Roboto-Bold.ttf'), format('truetype');
  font-weight: bold;
  font-style: normal;
}

@font-face {
  font-family: 'genericaregular';
  src: url('../../other/fonts/generica-webfont.woff2') format('woff2'),
         url('../../other/fonts/generica-webfont.woff') format('woff'),
         url('../../other/fonts/Generica.eot') format('eot');
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'genericabold';
  src: url('../../other/fonts/generica-bold-webfont.woff2') format('woff2'),
       url('../../other/fonts/generica-bold-webfont.woff') format('woff'),
       url('../../other/fonts/Generica.eot') format('eot');
  font-weight: normal;
  font-style: normal;

}

*{
  margin: 0;
  padding: 0;
  border: 0;
}

/*-----style for no scrollbar in all pages----*/
/* html {
  overflow: scroll;
  overflow-x: hidden;
}

::-webkit-scrollbar {
  width: 0px;
  background: transparent;
} */

/* Scrollbar to all pages */
html{
  overflow-y: scroll;
}

/* width */
::-webkit-scrollbar {
  width: 12px;
}

/* Track */
::-webkit-scrollbar-track {
  background: #172732;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: #304857;
  border-radius: 100px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #3d5c6f;
  /* background: rgb(236, 199, 95) */
}

body{  
  font-size: 100%;
  margin: 0;
  padding: 0;
}

nav {
  background: #1d6986;
  box-shadow: 0 10px 20px rgba(0, 0, 0, .15), 0 3px 6px rgba(0, 0, 0, .23);
  width: auto;
  z-index: 500;
  display: flex;
  padding: 0;
}

nav:after {
  content: '';
  clear: both;
  display: table;
}

h2.aLogo-txt1 {
  margin-top: 3px;
  font-family: 'Roboto-regular', sans-serif;
  font-weight: inherit;
  font-size: 100%;
  margin-bottom: 0px;
  letter-spacing: 6px;
  text-decoration: none;
}

h2.aLogo-txt1 a {
  text-decoration: none;
  color: #ffffff;
}

h3.aLogo-txt2 {
  margin-top: 0px;
  color: #ffffff;
  padding-top: 5px;
  font-weight: inherit;
  font-size: 100%;
  margin-bottom: 0px;
  letter-spacing: 6px;
}

h3.aLogo-txt2 a {
  text-decoration: none;
  color: #ffffff;
  font-family: 'genericaregular', sans-serif;
}

div.aLogo {
  float: left;
  position: relative;
  line-height: 80px;
  margin-top: 14px;
  margin-left: 30px;
}

nav ul {
  float: right;
  padding: 0;
  height: 80px;
  margin-bottom: 0;
  list-style: none;
  position: relative;
  text-align: center;
  z-index: 4;
}

nav ul li {
  /*Accounts, Election, Candidates, etc*/
  /* float: left; */
  display: inline-block;
  height: 80px;
  background: #1d6986;
  text-align: center;
  /* margin: 0 5px; */
  width: 140px;
}

nav ul li a {
  color: rgb(255, 255, 255);
  line-height: 70px;
  text-decoration: none;
  font-size: 1.2em;
  padding: 8px 15px;
  letter-spacing: 1px;
  font-family: 'Roboto-light', sans-serif;
}

nav ul li a:visited, nav ul li a:link{
  text-decoration: none;
  border: 0;
  outline: none;
  box-shadow: none;
}

nav ul li a:hover {
  color: #ffc423;
  outline: none;
}

nav ul li a:active {
  text-decoration: none;
  color: rgb(255, 255, 255);
  box-shadow: none;
}

nav ul li:hover {
  background-color: #124254;
}

:link:focus, :visited:focus {
  outline: none;
}

.isDisabled{
  pointer-events: none;
}

nav ul ul {
  /*dropdown container*/
  position: absolute;
  top: 90px;
  border-top: 3px solid #124254;
  opacity: 0;
  visibility: hidden;
  /* transition: top .3s; */
  transition: all .4s ease;
}

nav ul ul li {
  /*dropdown list*/
  height: 50px;
  position: relative;
  margin: 0px;
  float: none;
  display: list-item;
}

nav ul ul li a {
  line-height: 50px;
  color:#000000 !important;
}

nav ul ul li .logout::before {
  content: "\f2f5";
  font-family: "Font Awesome 5 Free";
  padding: 0 10px 0 0;
}

nav ul ul li a:link {
  color: rgb(0, 0, 0);
}

nav ul ul li a:visited {
  color: black;
  text-decoration: none;
}

nav ul ul li a:hover {
  color: #1b1b1b;
  box-shadow: none;
  text-decoration: none;
}

nav ul ul li:hover {
  background-color: #e0a900;
  text-decoration: none;
}

nav ul ul li a:active {
  color: #1b1b1b;
  box-shadow: none;
  text-decoration: none;
}

nav ul ul ul {
  border-top: none;
}

nav ul ul ul li {
  position: relative;
  top: -60px;
  left: 140px;
}

nav ul li:hover>ul {
  top: 70px;
  opacity: 1;
  visibility: visible;
}

nav ul ul li {
  background: #ffc423;
  position: relative;
  margin: 0px;
  width: 140px;
  font-size: 0.8em;
  float: none;
  display: list-item;
  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
  z-index: 2;
}

nav ul ul li a {
  line-height: 50px;
  font-family: Roboto bold, sans-serif;
}

nav ul ul ul li {
  position: relative;
  font-size: 1em;
  top: -60px;
  left: 140px;
}

nav ul ul li .logout::before {
	content: "\f2f5";
	font-family: "Font Awesome 5 Free";
	padding: 0 10px 0 0;
}

.Ashow, .Ashow2, .ADicon, input {
  display: none
}

/* .nav-toggle1, .nav-toggle2, .nav-toggle3, .nav-toggle4, .nav-toggle5, .nav-toggle6, .nav-toggle7 {
  display: none;
} */

/* .fa-plus{
    font-size: 15px;
    margin-left: 40px;
  } */

@media all and (max-width: 1000px) {
  nav ul {
    margin-right: 0px;
    margin-left: 0px;
    float: left;
  }
  nav .aLogo {
    margin-bottom: 3%;
    width: auto;
    float: left;
    margin-left: 20px;
  }
  .Ashow+a, ul {
    display: none;
  }
  .Ashow2+a, ul {
    display: none;
  }
  nav ul li, nav ul ul li, nav ul ul ul li{
    width: 100%;
  }
  nav ul li a:hover {
    box-shadow: none;
  }
  .Ashow {
    display: block;
    color: #fafafa !important;
    font-size: 1.2em;
    padding: 0 20px;
    line-height: 70px;
    cursor: pointer;
    margin-bottom: 0;
  }
  .Ashow2 {
    display: block !important;
    color: #000000 !important;
    font-size: 1.2em;
    padding: 0;
    line-height: 50px;
    cursor: pointer;
    margin-bottom: 0;
  }
  .Ashow:hover {
    color: rgb(0, 0, 0);
  }
  .ADicon {
    display: block;
    color: #ffffff;
    position: absolute;
    top: 0;
    right: 40px;
    line-height: 70px;
    cursor: pointer;
    font-size: 25px;
  }
  nav ul ul {
    top: 70px;
    border-top: 0px;
    border-bottom: 0px;
    float: none;
    position: static;
    display: none;
    opacity: 1;
    visibility: visible;
  }
  nav ul ul a {
    left: 0;
  }
  nav ul ul ul {
    top: 70px;
    border-top: 0px !important;
    border-bottom: 0px;
    float: none;
    position: static;
    display: none;
    opacity: 1;
    visibility: visible;
  }
  nav ul ul ul a {
    left: 0px;
  }
  nav ul ul ul li {
    margin-top: 0;
    position: static;
  }
  [id^=btn]:checked + ul {
    width: 100%;
    left: 0;
    display: block;
  }
  nav ul ul li {
    border-top: 0px;
    border-bottom: 0px;
  }
  span.cancel:before {
    content: '\f00d';
  }
}
/*footer*/

.footer {
  position: fixed;
  left: 0;
  bottom: 0;
  width: 100%;
  height: auto;
  padding: 10px 5px 10px 5px;
  background-color: #124254;
  text-align: center;
  z-index: 500;
  /* para very front lagi ang footer */
}

div p.footer-txt {
  position: relative;
  margin-top: auto;
  margin-bottom: auto;
  font-family: 'Roboto-regular', sans-serif;
  letter-spacing: 7px;
  font-size: 10px;
  color: #ffffff;
}

nav img.user-profile {
  display: inline-block;
  width: 40px;
  height: 40px;
  border-radius: 50%;

  background-repeat: no-repeat;
  background-position: center center;
  background-size: cover;
}

